# letter-ai-bridge

./: .gitignore  README.md  debug_env.py  opencode.jsonc  process_letters.py  pyproject.toml  requirements.txt
app/api/: chat_service.py  search_service.py
app/api/logic/: information_retriever.py
app/api/services/: summary_service.py
app/core/: config.py  letter_ingester.py  logger.py
app/core/services/: protag_whereabouts_service.py  whereabouts_service.py
app/database/: connection.py  ingest_chunks.py
app/database/models/: creation.py  entity_embedding.py  institution.py  letter.py  letter_embedding.py  person.py  place.py  protag_creation.py  settlement.py  sight.py
app/database/services/: ingest_chunks_service.py  retrieve_entity_infos_service.py
app/indexer/: tei_chunker.py  tei_cleaner.py  tei_header_chunker.py
app/indexer/handler/: __init__.py  base_handler.py  default_handler.py  note_handler.py  pers_name_handler.py  place_handler.py  title_handler.py
app/util/: string_cleaner.py
app/utils/: letter_helper.py  string_cleaner.py
config/: settings.yml.example
data/letters/1822/: fmb-1822-01-08-01.xml  fmb-1822-01-09-01.xml  fmb-1822-03-19-01.xml  fmb-1822-05-24-01.xml  fmb-1822-07-19-01.xml  fmb-1822-07-19-02.xml  fmb-1822-07-26-01.xml  fmb-1822-08-09-01.xml  fmb-1822-08-22-01.xml  fmb-1822-08-27-01.xml  fmb-1822-09-13-01.xml  fmb-1822-12-12-01.xml
data/letters/1841/: fmb-1841-02-27-04.xml
scripts/: check_gpu.py  generate_letter_summaries.py  process_fmb_locations.py  process_letters.py  process_single_letter.py  sync_whereabouts.py  test_chunker_real_db.py  test_db_integration.py  test_title_handler.py
scripts/tests/: test_header_chunker.py  test_node_processor.py  test_place_name_processor.py
tests/: conftest.py
tests/chunk_generation/: test_cleaner.py  test_parser.py  test_tei_processing.py
tests/fixtures/: letter_p_pers_name.xml  sample_letter.xml
tests/utils/: test_letter_helper.py
(+7 files in other folders)
