[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "letter-ai-bridge"
version = "0.1.0"
description = "Bridge between TEI XML letters and Vector Database for HU Berlin"
dependencies = [
    "lxml",
    "psycopg2-binary",
    "sentence-transformers",
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.fmb_pipeline.logging]
enabled = true
level = "DEBUG"
file_logging = true

[tool.fmb_pipeline]
debug = false
log_to_file = true
protag_name = "Mendelssohn Bartholdy (bis 1816: Mendelssohn), Jacob Ludwig Felix (1809-1847)"
protag_key = "PSN0000001"
truncate_embeddings_on_start= false

[tool.fmb_pipeline.database]
host = "localhost"
port = 5432
dbname = "metamw_development_prod_version"
user = "admin"
password = "secret"

[tool.fmb_pipeline.api]
host = "http://backend.metamw.local:3000"
auth_key = "8VEKeLRjU_YcICeC095rpzWTnSq4K1NyTvokPNTriVwTx-4nC1R9vyvRzZlBCGOexkgI8Pixc1jZ-Twk31cJTQ"


[tool.pytest.ini_options]
# 1. Enable Live Logging in the Console
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# 2. Enable Logging to a File
log_file = "logs/test_run.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# 3. Add default test paths
testpaths = ["tests"]
